Add requests test

--- a/circle.yml
+++ b/circle.yml
@@ -21,6 +21,7 @@ test:
   override:
     - echo "deploying with prefix circle-${CIRCLE_BUILD_NUM}"
     - ansible-playbook -e "prefix=circle-${CIRCLE_BUILD_NUM}" deploy.yml
+    - python tests/infra_test.py
   post:
     - echo "remove api stage"
 
